docs: fix home page buttons display on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 996px) {
   .heroBanner {
-    padding: 2rem;
+  padding: 2rem;
   }
 }
 
@@ -20,4 +20,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 996px) {
+  .buttons {
+    display: block;
+  }
 }
